--- a/style.css
+++ b/style.css
@@ -81,3 +81,13 @@ h3 {
     background-color: green;
     color: white;
   }
+  #rainbow{
+    
+    border-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
+    border-image-slice: 1;
+    color: black;
+  }
+  #rainbow:hover {
+    background-image: linear-gradient(to bottom right, #b827fc 0%, #2c90fc 25%, #b8fd33 50%, #fec837 75%, #fd1892 100%);
+    color: black;
+  }
